# tools

./: .bash_aliases  .bashrc  .gitignore  .gitmodules  .htaccess  .pylintrc  .travis.yml  .xsessionrc  Assert.test.js  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.md  E262_3.js  GTTV.py  Includes.pm  LICENSE.txt  Makefile  Notes.rtf  Opera.css  Opera.html  README.md  README.txt  SConstruct  SETUP.md  Stopwatch.html  TODO.md  TODO.org  TODO.txt  Test.pl  Tests.csv  Tests.pl  TodoPaper.ahk  Vodafone MBSD rescan.py  Vodafone MBSD rescan.pyw  Web.cfg  Web.lisp  Windows.ahk  amazon-live-creator.user.js  argf.py  assert.js  (+85 more)
Automate/: GT.TV.txt  To Do.txt  automate.pyw  error.txt
Automate/automate/: __init__.py  config.py
Automate/automate.old/: backup.py  cleanup.py  download.py
Code/: E262.js  E262_3.js  Tests.pl  assert.js  assert.test.js  browser.pl  firefox.pl  server.pl  test.pl
Documents/: Notes.rtf  Portability Guide.txt  Tests.csv  Tests.old.csv
Draft/: Notes.rtf
ES/: E262_3.js  ES3.js  Notes.txt  SConstruct  assert.js  assert.test.js  buster.js
Ideas/: Notes.rtf
Java Object Inspector/: .gitignore  build.properties  build.xml
MySite/: .gitignore  bower.json  gulpfile.js  package.json
Opera Messenger/: .gitignore  Help.txt  Notes.txt
Pages/: Home.lisp  Projects.lisp
User JS/: GameTrailers.js  Oslo Kino.js  YouTube HD.js  YouTube download.js
angular-example/: README.txt  bower.json  gulpfile.js  package.json
argf/: .travis.yml  setup.cfg  setup.py
c-library/: CMakeLists.txt  Extensions.cmake  Object.h  properties.c  properties.h  properties.test.c  ptr.c  ptr.h  ref.h  test.h  types.h  util.h  util.test.c
c-library/iterator/: Iterator.c  Iterator.h  Iterator_Implementation.h
c-library/list/: Array_List.c  Array_List.h  Array_List.test.c  Linked_List.c  Linked_List.h  Linked_List.test.c  List.c  List.h  List.test.c  List_Implementation.h
c-library/map/: Hash_Map.c  Hash_Map.h  Hash_Map.test.c  Map.c  Map.h  Map.test.c  Map_Implementation.h
c-library/std/: errno.h  limits.h  math.h  math.test.c  stdarg.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  string.test.c
clion/: Dockerfile  README.md  clion  docker-compose.yml
clion-docker/: Dockerfile  README.md  clion  docker-compose.yml
cloudsync/: __main__.py  client.py  error.py  event.py  state.py
config/: pep8.ini  pylint.ini
devbox/: Dockerfile  clion  docker-compose.yml  idea
docker/: clion.cmd  clion.sh  idea.cmd  idea.sh
docs/: LICENSE.txt  README.rst  TODO.txt  conf.py  index.rst  requirements.txt
etc/: pep8_cmd.py  sphinx_cmd.py  travis_ci_cmd.py
examples/: grep.py
exercises/: add_del_list.py  bowling.py  connect_four.py  detect_cycle.py  find_pairs.py  pairs_sum.py  permutate_string.py  pick_random.py  reverse_array.py  reverse_list.py  shortest_path.py  shortest_substring.py  spiral_matrix.py
experiments/: feed_finder.py  infer.py  lazy.py
feed-enclosure/: NOTES.md  README.md  TODO.org  download_enclosure.sh  feed_rebuild_enclosures.py  feed_rebuild_enclosures.requirements.txt  liferea_auto_enclosure_download.sh  liferea_download_enclosure.sh  liferea_find_opml.sh  liferea_minimized.sh  lint_python.requirements.txt  lint_python.sh  requirements.txt  xml_set_attr_value.sh  youtube_dl_wrapper.py  youtube_dl_wrapper.requirements.txt
gbi/: README.md  gbisr-dmg-gbc-2x-zoom.cli  gbisr-dmg-gbc-3x-zoom.cli  gbisr-gba-2x-zoom.cli  gbisr.dol
idea/: idea
idea-docker/: Dockerfile  docker-compose.yml  idea
ir/: Creative T4 Wireless.pronto.csv  Dyson AM07.pronto.csv  Samsung UN65KU6300.pronto.csv  Sony BDP-SX910.pronto.csv  Sony PlayStation 2.pronto.csv
kata-bowling/: bowling.py  test_functional.py  test_unit.py
puppet/: graphite-apache2-site.conf  install-graphite-statsd.txt  install-solr.txt  notes.txt  statsd-config.json
puzzles/: _celebrity.py  _find_dups.py  _fizzle_fade.py  _hamming_distance.py  add_del_list.py  add_number_list.py  alternate_matrix.py  anagram.py  balanced_delims.py  balanced_parens.py  balanced_parens_combine.py  bowling.py  celebrity.py  char_set_same.py  coin_change.py  connect_four.py  count_domain_clicks.py  count_valleys.py  detect_cycle.py  diff_array.py  factorial.py  fibonacci.py  find_array_unknown.py  find_celebrity.py  find_dups.py  find_longest_common_history.py  first_non_repeat.py  fizz_buzz.py  fizzle_fade.py  insert_interval.py  integer_to_english.py  interleave_strings.py  isomorphic.py  level_sum_bin_tree.py  longest_substring.py  matrix_rotate.py  most_frequent.py  normalize_path.py  nth_last_node.py  pairs_sum.py  (+20 more)
salt/: jdk.sls  python26.sls  solr.sls
setupcmds/: base.py  travis_ci.py
setupext/: __init__.py
show/: .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYRIGHT.txt  Notes.txt  README.md  SConstruct  docs.rst  notes.txt  show.py  tests.py
site_tools/: coverage.py  coverage_py.py  cython.py  find.py  globr.py  line_profiler.py  pep8.py  pylint.py  pyprofile.py  python.py  pyunit.py  sphinx.py  travis-lint.py  unittest_py.py  virtualenv.py  which.py
sources/: argf.py  test.py
src/: Array.c  Array.h  Array_List.c  Error.c  Error.h  Iterator.h  List.c  List.h  Ls_Plugin.c  Options.c  Options.cpp  Options.h  Plugin.c  Plugin.h  array.h  auto-pager.sh  autopager.sh  feed_rebuild_enclosures.py  fork_exec.c  fork_exec.h  io.c  io.h  liferea-enclosure-auto-download.sh  main.c  main.cpp  options.c  options.cpp  options.h  popen2.c  popen2.h  pty.c  show.cpp  show.sh  signal2.c  signal2.h
std/: string.h
test/: Array.test.c  argument_order.t  array.test.c  directory.t  file.t  functional.py  main.c  main.test.c  paging.t  pipe.t  plugin_option.t  setup.sh  unknown_path.t  unsupported_input.t
tests/: functional.py  test_functional.py  test_unit.py  unittest.py
tst/: argument_count.t  argument_order.t  arguments.t  directory.t  file.t  help.t  mix_plugins.t  pager.t  pipe_input.t  plugin_dir.t  plugin_option.t  plugin_options.t  plugin_pager.t  plugin_stdin.t  setup.sh  stdio.t  unsupported_input.t  unsupported_inputs.t
www/: index.css  index.html
xB/: assert.js  assert.test.js
(+296 files in other folders)
